--- a/pb/Makefile
+++ b/pb/Makefile
@@ -7,9 +7,9 @@ zehnder.proto :
 	curl -s https://raw.githubusercontent.com/michaelarnauts/comfoconnect/master/protobuf/zehnder.proto >> zehnder.proto
 
 deps:
-	go get github.com/golang/protobuf/protoc-gen-go
+	go get google.golang.org/protobuf/cmd/protoc-gen-go
 
 zehnder.pb.go : zehnder.proto deps
-	protoc --proto_path=. --go_out=. --go_opt=paths=source_relative zehnder.proto
+	protoc -I=. --go_out=. --go_opt=paths=source_relative zehnder.proto
 
 all: zehnder.pb.go
